hphp/hack/test/typecheck/primitive_casing.php.exp
File "primitive_casing.php", line 3, characters 12-16:
Keyword Array must be written in lowercase (Parsing[1002])
