hphp/hack/test/typecheck/primitive_casing.php
<?hh // partial

function f(Array $arr): String {
  return 's';
}
